@@ -1172,7 +1172,21 @@ AC_ARG_ENABLE(
   )
 
 if test yes = $enable_pam; then
-  AC_CHECK_HEADER(security/pam_appl.h, 
+  ac_pam_header_available=
+
+  AC_CHECK_HEADER([security/pam_appl.h], [
+    AC_DEFINE([HAVE_SECURITY_PAM_APPL_H], 1, [Define to 1 if security/pam_appl.h is available])
+    ac_pam_header_available=1])
+
+  if test -z "$ac_pam_header_available"; then
+  AC_CHECK_HEADER([pam/pam_appl.h], [
+    AC_DEFINE([HAVE_PAM_PAM_APPL_H], 1, [Define to 1 if pam/pam_appl.h is available])
+    ac_pam_header_available=1])
+  fi
+
+  if test -z "$ac_pam_header_available"; then
+    AC_MSG_ERROR([Could not find PAM headers])
+  else
     AC_DEFINE(HAVE_PAM, 1, 
     [Define to enable system authentication with PAM instead of using the 
     simple getpwnam interface.  This allows authentication (in theory) 
@@ -1181,9 +1195,8 @@ if test yes = $enable_pam; then
       AC_MSG_ERROR([Could not find PAM libraries but the headers exist.
       Give the --disable-pam option to compile without PAM support (or fix
       your broken configuration)])
-    ),
-    AC_MSG_ERROR([Could not find PAM headers])
-  )
+    )
+  fi
 fi
 
 dnl
